--- a/index.html
+++ b/index.html
@@ -16,7 +16,21 @@
 
     .app {
       display: flex;
-      justify-content: center;
+      /*justify-content: center;*/
+      align-items: center;
+      flex-direction: column;
+    }
+
+    #input-bar {
+      /*width: 100%;*/
+    }
+
+    .todo-list {
+      /*width: 100%;*/
+    }
+
+    .todo-is-done {
+      text-decoration: line-through;
     }
   </style>
 </head>
@@ -26,6 +40,10 @@
       <h1>Todo App</h1>
     </header>
     <div class="app">
+      <form id="input-bar" name="input-bar">
+        <input type="text" name="todo-input" placeholder="write down something you need to do">
+        <button class="button-add" type="submit">add</button>
+      </form>
       <ul class="todo-list">
 
       </ul>
