[add] babel to project and [move] the style settings to main.css

--- a/index.html
+++ b/index.html
@@ -3,53 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Todo app</title>
-  <style>
-    .container {
-      width: 800px;
-      margin: 0 auto;
-    }
-
-    .header {
-      margin: 0 auto;
-      text-align: center;
-    }
-
-    .app {
-      display: flex;
-      /*justify-content: center;*/
-      align-items: center;
-      flex-direction: column;
-    }
-
-    .input-form {
-      
-    }
-
-    input[name=todo-input] {
-      display: inline-block;
-      width: 250px;
-    }
-    
-    .todo-list {
-      padding-left: 0;
-    }
-
-    ul > li {
-      list-style: none;
-    }
-
-    .todo-checkbox {
-
-    }
-
-    .todo-content {
-      display: inline-block;
-    }
-
-    .todo-is-done {
-      text-decoration: line-through;
-    }
-  </style>
+  <link rel="stylesheet" href="./main.css">
 </head>
 <body>
   <div class="container">
@@ -66,6 +20,6 @@
       </ul>
     </div>
   </div>
-  <script src="./app.js"></script>
+  <script src="./compile/app.js"></script>
 </body>
 </html>
