[Adjust] the project structures and [finish] some part of editing todo in place

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Todo app</title>
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
   <div class="container">
@@ -20,6 +20,7 @@
       </ul>
     </div>
   </div>
-  <script src="./compile/app.js"></script>
+  <!--<script src="scripts/app.js"></script>-->
+  <script src="scripts/compile/app.compatible.js"></script>
 </body>
 </html>
