[Feature] of editing todo in place is finish, but remains some UI problem

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </header>
     <div class="app">
       <form class="input-form" name="input-bar">
-        <input type="text" name="todo-input" placeholder="write down something you need to do">
-        <button class="button-add" type="submit">add</button>
+        <input type="text" name="todo-input" placeholder="write down something you need to do" autofocus>
+        <button class="button button-add" type="submit">add</button>
       </form>
       <ul class="todo-list">
 
