[Feature] of only allowing one todo can be editable at once is finished. [Fixed] the problem of addTodo(). Added some [UI] of todo list.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="app">
       <form class="input-form" name="input-bar">
         <input type="text" name="todo-input" placeholder="write down something you need to do" autofocus>
-        <button class="button button-add" type="submit">add</button>
+        <button class="button button-add-todo" type="submit">add</button>
       </form>
       <ul class="todo-list">
 
