--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </ul>
     </div>
   </div>
-  <!--<script src="scripts/app.js"></script>-->
-  <script src="scripts/compile/app.compatible.js"></script>
+  <script src="scripts/app.js"></script>
+  <!--<script src="scripts/compile/app.compatible.js"></script>-->
 </body>
 </html>
