--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <input type="text" name="todo-input" placeholder="write down something you need to do" autofocus>
         <button class="button button-add-todo" type="submit">add</button>
       </form>
+      <ul class="display-ctrl"></ul>
       <ul class="todo-list">
 
       </ul>
