[Updated] the code of displaying tabs by rendering elements in html file instead of using js to render them.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
         <input type="text" name="todo-input" placeholder="write down something you need to do" autofocus>
         <button class="button button-add-todo" type="submit">add</button>
       </form>
-      <ul class="display-ctrl"></ul>
+      <ul class="display-ctrl">
+        <li class="display-option">
+          <button class="button display-all">All</button>
+        </li>
+        <li class="display-option">
+          <button class="button display-done">Done</button>
+        </li>
+        <li class="display-option">
+          <button class="button display-not-done">Not Done</button>
+        </li>
+      </ul>
       <ul class="todo-list">
 
       </ul>
