[Changed] to use the es2017 version, due to some problem with babel to handle async function.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </ul>
     </div>
   </div>
-  <!--<script src="scripts/app.js"></script>-->
-  <script src="scripts/compile/app.compatible.js"></script>
+  <script src="scripts/app.js"></script>
+  <!--<script src="scripts/compile/app.compatible.js"></script>-->
 </body>
 </html>
