[Added] animation for all elements and improved the [UI] display effect.

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <header class="header">
-      <h1>Todo App</h1>
+      <h1 class="app-name">Todo App</h1>
     </header>
     <div class="app">
       <form class="input-form">
