--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <div class="app">
       <form class="input-form">
         <div class="input-bar">
-          <input type="text" name="todo-input" placeholder="write down something" autofocus autocomplete="off">
+          <input type="text" name="todo-input" placeholder="write down something" autofocus autocomplete="off" maxlength="140">
           <span class="focus-border"></span>
         </div>
         <button class="button button-add-todo" type="submit">add</button>
