--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Todo app</title>
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/main.css">
+  <!--<link rel="stylesheet" href="styles/normalize.css">-->
+  <!--<link rel="stylesheet" href="styles/main.css">-->
 </head>
 <body>
   <div class="container">
